--- a/demo/kuberPod.yml
+++ b/demo/kuberPod.yml
@@ -1,1 +1,11 @@
 apiVersion: v1
+kind: Pod
+metadata:
+  name: memory-demo
+spec:
+  containers:
+  - name: memory-demo-ctr
+    image: polinux/stress
+    imagePullPolicy: Never
+    ports:
+      - containerPort: 8080
