--- a/nginx-demo/nginx-service.yml
+++ b/nginx-demo/nginx-service.yml
@@ -6,7 +6,9 @@ spec:
   selector:
     # app.kubernetes.io/name: MyApp
     app: nginx
+  type: LoadBalancer
   ports:
     - protocol: TCP
-      port: 81
+      port: 80
       targetPort: 80
+      nodePort: 30000
